--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,11 @@
 {
     "extends": "standard",
-    "indent": ["error", 4]
+    "indent": ["error", "tab"],
+    "validate": [
+        "javascript",
+        "javascriptreact", {
+            "language": "html",
+            "autoFix": true
+        }
+    ]
 }
